--- a/package.json
+++ b/package.json
@@ -33,10 +33,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "json-server": "^0.16.3",
+    "lodash": "^4.17.21",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "use-debounce": "^7.0.0",
     "web-vitals": "^1.1.2"
   }
 }
