--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.23.0",
     "json-server": "^0.16.3",
     "lodash": "^4.17.21",
     "node-sass": "^4.14.1",
@@ -41,6 +42,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "use-debounce": "^7.0.0",
     "web-vitals": "^1.1.2"
   }
